# sift

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: clipboard.rs  download.rs  main.rs  model.rs  prefilter.rs  tui.rs
