[package]
name = "sift"
version = "0.1.0"
edition = "2024"
description = "Strip noise from error output. Powered by a local LLM."
license = "MIT"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
llama-cpp-2 = "0.1"
regex = "^1.11"
dirs = "5"
indicatif = "^0.17"
ureq = "^3.2"
anyhow = "^1.0"
libc = "0.2"
ratatui = "^0.30"
crossterm = "^0.28"
arboard = "^3.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
